Chap2.3.4-XXX: optimized code