@@ -7,7 +7,7 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Component
 public class CustomAuthenticationProvider implements AuthenticationProvider {
@@ -18,7 +18,7 @@ public class CustomAuthenticationProvider implements AuthenticationProvider {
         String password = String.valueOf(authentication.getCredentials());
 
         if ("john".equals(username) && "12345".equals(password)) {
-            return new UsernamePasswordAuthenticationToken(username, password, Arrays.asList());
+            return new UsernamePasswordAuthenticationToken(username, password, List.of());
         } else {
             throw new AuthenticationCredentialsNotFoundException("Error!");
         }
